--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -60,7 +60,18 @@ jobs:
           echo "$PWD" >> $GITHUB_PATH
           echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
           echo "$PWD/llvm-mingw/lib" >> $GITHUB_PATH
-          choco install ninja
+          choco install ninja 7z
+
+          export BOOST_SDK=https://github.com/ossia/score-sdk/releases/download/sdk23
+          export BOOST_VER=boost_1_78_0
+          (
+            BOOST="$BOOST_VER.zip"
+            curl -L -0 "$BOOST_SDK/$BOOST" --output "$BOOST"
+            mkdir -p "boost/include"
+            7z x "$BOOST"
+            mv boost_*/boost "boost/include/"
+          )
+
         else
           brew install ninja boost
         fi
@@ -74,7 +85,7 @@ jobs:
       run: |
         mkdir build && cd build
         if [ "$RUNNER_OS" == "Windows" ]; then
-          cmake -GNinja -DBOOST_ROOT="$BOOST_ROOT_1_78_0" ..
+          cmake -GNinja -DBOOST_ROOT="$PWD/boost" ..
         else
           cmake ..
         fi
@@ -105,7 +116,7 @@ jobs:
           cp $PWD/llvm-mingw/bin/libunwind.dll build/
           export PATH="$PWD/llvm-mingw/bin:$PATH"
 
-          export CNINJA_FLAGS="$CNINJA_FLAGS  -- -DBOOST_ROOT=$BOOST_ROOT_1_78_0"
+          export CNINJA_FLAGS="$CNINJA_FLAGS  -- -DBOOST_ROOT=$PWD/boost"
         fi
 
         build/cninja $CNINJA_FLAGS
