[ci] Add debug logs to try to understand the issue

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -39,7 +39,7 @@ jobs:
             release_flags: "era=11.0 static lto=full small"
           }
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Get latest release version number
       id: get_version
@@ -58,6 +58,10 @@ jobs:
           cmake -P 'cmake/download-llvm.cmake'
           cmake -E tar x llvm.zip
           cmake -E tar x ninja.zip
+          echo " ===== ?? "
+          ls
+          echo " ===== !! "
+          find . -name clang.exe
           cp ninja.exe "$PWD/llvm-mingw/bin/"
           echo "$PWD" >> $GITHUB_PATH
           echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
@@ -72,9 +76,18 @@ jobs:
         (
           BOOST="$BOOST_VER.tar.gz"
           curl -L -0 "$BOOST_SDK/$BOOST" --output "$BOOST"
-          mkdir -p "boost/include"
+
           cmake -E tar xzf "$BOOST"
+          echo " ============ 1 "
+          ls
+          echo " ============ 2 "
+          ls $BOOST_VER
           mv $BOOST_VER boost
+          echo " ============ 3 "
+          ls
+          echo " ============ 4 "
+          find . -name 'version.hpp'
+          pwd
         )
       shell: bash
 
@@ -84,6 +97,8 @@ jobs:
         CXXFLAGS: ${{ matrix.config.cxxflags }}
         CXX: ${{ matrix.config.cxx }}
       run: |
+        find . -name 'version.hpp'
+        pwd
         cmake \
           -S $PWD \
           -B build \
@@ -94,7 +109,7 @@ jobs:
 
     - name: Build
       if: matrix.config.name != 'Tarball'
-      run: cd build && cmake --build .
+      run: cmake --build build
 
     - name: Test
       if: matrix.config.name != 'Tarball'
